--- a/src/test/java/resources/application.properties
+++ b/src/test/java/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql=true
-path.to.avatars.folder= /avatars
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.show-sql=true
+#path.to.avatars.folder= /avatars
 
