--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= update
 #spring.jpa.show-sql=true
-#path.to.avatars.folder= /avatars
+path.to.avatars.folder= /avatars
 
