--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=school
 spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username= student
 spring.datasource.password= chocolatefrog
+spring.liquibase.change-log=classpath:liquibase/index-practice.yml
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 path.to.avatars.folder= /avatars
